# shift_transaction_service

./: .darglint  .dockerignore  .editorconfig  .flake8  .gitignore  .gitlab-ci.yml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Dockerfile_test  README.md  alembic.ini  docker-compose-test.yaml  docker-compose.yaml  pyproject.toml  setup.cfg
.devcontainer/: devcontainer.json  docker-compose.yml
.devcontainer/app/: .p10k.zsh  .zshrc  Dockerfile  post-start.sh
.github/workflows/: main.yaml  pre-commit.yaml
helm/transaction-service-chart/: values.yaml
helm/transaction-service-chart/templates/: NOTES.txt  _helpers.tpl  configmap.yaml  deployment.yaml  secret.yaml  service.yaml
helm/transaction-service-chart/templates/tests/: test-connection.yaml
kuber/: configmap.yaml  deployment.yaml  pod.yaml  secret.yaml  service.yaml
src/app/: constants.py  main.py  service.py
src/app/api/: __init__.py  endpoints.py  schemas.py  schemes.py
src/app/db/: __init__.py  basemodels.py  database.py  models.py
src/app/db/migrations/: env.py
src/app/db/migrations/versions/: 7a52aeb252b8_initial.py  b9b276be0e05_initial.py  bda96c0c2257_function_and_trigger.py
src/app/service/: __init__.py  service.py
src/config/: config.py  config.yaml
src/tests/: conftest.py  constants.py  test_logic.py  test_service.py
src/tests/integration/: conftest.py  test_api.py
src/tests/unit/service/: conftest.py  test_service.py
