[tool.poetry]
name = "src"
version = "0.4.0"
description = ""
authors = ["Vasilii Stakrotckii <inferno681@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.1"
pydantic-settings = "^2.3.4"
alembic = "^1.13.2"
sqlalchemy = "^2.0.32"
asyncpg = "^0.29.0"
alembic-postgresql-enum = "^1.3.0"
sqlalchemy-utils = "^0.41.2"
psycopg2-binary = "^2.9.9"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.0"
isort = "^5.13.2"
pytest = "^8.2.2"
mypy = "^1.10.1"
pytest-cov = "^5.0.0"
wemake-python-styleguide = "^0.19.2"
time-machine = "^2.14.2"
types-pyyaml = "^6.0.12.20240724"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79
target-version = ["py312"]
exclude = '''
/(
    \.devcontainer
  | \.git
  | \.venv
  | \.vscode
)/
'''
